# money-tracker-ai-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 77b170f6f549_create_memory_message_table.py  df05050b4bda_create_table_transaction.py  ff2f24d9d07f_create_message_log_table.py
src/: main.py
src/agent/: ai_agent.py  memory_management.py
src/agent/prompt/: system_prompt.yaml
src/agent/tools/: category_tools.py  common_tools.py  greet.py  transaction_tools.py
src/controllers/: message_controller.py  whatapps_hook_controller.py
src/core/interfaces/: tool.py  transaction_repository_interface.py
src/core/models/: memory_message_model.py  message_log_model.py  message_model.py  transaction_model.py
src/core/schemas/: memory_message_schema.py  message_log_schema.py  transaction_schema.py
src/database/: connection.py
src/repositories/: memory_message_repository.py  message_log_repository.py  transaction_repository.py
src/services/: llm_service.py  utils.py  webhook_message_service.py
tests/agent/tools/: test_common_tools.py  test_transaction_tools.py  test_transaction_tools_with_mock.py
tests/mocks/: mock_transaction_repository.py
tests/services/: test_utils.py
